--- a/src/components/CarroWidget/CarroWidget.css
+++ b/src/components/CarroWidget/CarroWidget.css
@@ -1,16 +1,10 @@
-.carrocont{
-    display:flex;
+.carrowidget {
+    display: flex;
+    align-items: center;
 }
 
-.contador{
-    height:35px;
-    width:35px;
-    text-align: center;
-    border-radius:25px;
-    color:white;
-    font-size:2em;
-    position:relative;
-    top:65px;
-    left:-40px;
-    background-color:red;
+.carrowidget img {
+    width: 50px;
+    height: 50px;
+    padding: 5px;
 }
