--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-.navbar{
+.navbar {
     width:100%;
     height:150px;
     background-color:rgb(20, 20, 20);
@@ -11,15 +11,25 @@
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.navbar .logo{
+.navbar .logo {
     height:150px;
 }
 
-.categorias{
+.categorias {
     display: flex;
     list-style: none;
 }
 
-.categorias li{
+.categorias li {
     padding: 0 15px;
+    box-sizing: border-box;
+}
+
+.categorias li:hover {
+    border-bottom: 3px solid rgb(0, 129, 235);
+}
+
+.categorias li a {
+    text-decoration:none;
+    color: rgb(88, 180, 255);
 }
